// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Storybook 시각 회귀 스냅샷 > ConfirmDialog/Danger 렌더링 스냅샷 유지 1`] = `null`;

exports[`Storybook 시각 회귀 스냅샷 > ConfirmDialog/Success 렌더링 스냅샷 유지 1`] = `null`;

exports[`Storybook 시각 회귀 스냅샷 > FilterBar/Playground 렌더링 스냅샷 유지 1`] = `
<div
  class="MuiStack-root css-1lby378-MuiStack-root"
>
  <h6
    class="MuiTypography-root MuiTypography-subtitle2 css-1x0mq5c-MuiTypography-root"
  >
    상태
  </h6>
  <div
    class="MuiStack-root css-1vxpuni-MuiStack-root"
  >
    <div
      class="MuiButtonBase-root MuiChip-root MuiChip-filled MuiChip-sizeMedium MuiChip-colorPrimary MuiChip-clickable MuiChip-clickableColorPrimary MuiChip-filledPrimary css-c9bmt5-MuiButtonBase-root-MuiChip-root"
      role="button"
      tabindex="0"
    >
      <span
        class="MuiChip-label MuiChip-labelMedium css-1dybbl5-MuiChip-label"
      >
        <div
          class="MuiStack-root css-nfwmfk-MuiStack-root"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall css-120dh41-MuiSvgIcon-root"
            data-testid="HistoryRoundedIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M13.26 3C8.17 2.86 4 6.95 4 12H2.21c-.45 0-.67.54-.35.85l2.79 2.8c.2.2.51.2.71 0l2.79-2.8c.31-.31.09-.85-.36-.85H6c0-3.9 3.18-7.05 7.1-7 3.72.05 6.85 3.18 6.9 6.9.05 3.91-3.1 7.1-7 7.1-1.61 0-3.1-.55-4.28-1.48-.4-.31-.96-.28-1.32.08-.42.42-.39 1.13.08 1.49C9 20.29 10.91 21 13 21c5.05 0 9.14-4.17 9-9.26-.13-4.69-4.05-8.61-8.74-8.74m-.51 5c-.41 0-.75.34-.75.75v3.68c0 .35.19.68.49.86l3.12 1.85c.36.21.82.09 1.03-.26.21-.36.09-.82-.26-1.03l-2.88-1.71v-3.4c0-.4-.34-.74-.75-.74"
            />
          </svg>
          <span
            class="MuiTypography-root MuiTypography-body2 css-bvuapi-MuiTypography-root"
          >
            전체
          </span>
          <span
            class="MuiTypography-root MuiTypography-caption css-mpaqru-MuiTypography-root"
          >
            12
          </span>
        </div>
      </span>
    </div>
    <div
      class="MuiButtonBase-root MuiChip-root MuiChip-outlined MuiChip-sizeMedium MuiChip-colorDefault MuiChip-clickable MuiChip-clickableColorDefault MuiChip-outlinedDefault css-18i5t4e-MuiButtonBase-root-MuiChip-root"
      role="button"
      tabindex="0"
    >
      <span
        class="MuiChip-label MuiChip-labelMedium css-16cgrcw-MuiChip-label"
      >
        <div
          class="MuiStack-root css-nfwmfk-MuiStack-root"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall css-120dh41-MuiSvgIcon-root"
            data-testid="TaskAltRoundedIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="m21.29 5.89-10 10c-.39.39-1.02.39-1.41 0l-2.83-2.83a.996.996 0 0 1 0-1.41c.39-.39 1.02-.39 1.41 0l2.12 2.12 9.29-9.29c.39-.39 1.02-.39 1.41 0 .4.39.4 1.02.01 1.41m-5.52-3.15c-1.69-.69-3.61-.93-5.61-.57-4.07.73-7.32 4.01-8.01 8.08C1.01 17 6.63 22.78 13.34 21.91c3.96-.51 7.28-3.46 8.32-7.31.4-1.47.44-2.89.21-4.22-.13-.8-1.12-1.11-1.7-.54-.23.23-.33.57-.27.89.22 1.33.12 2.75-.52 4.26-1.16 2.71-3.68 4.7-6.61 4.97-5.1.47-9.33-3.85-8.7-8.98.43-3.54 3.28-6.42 6.81-6.91 1.73-.24 3.37.09 4.77.81.39.2.86.13 1.17-.18.48-.48.36-1.29-.24-1.6-.27-.12-.54-.25-.81-.36"
            />
          </svg>
          <span
            class="MuiTypography-root MuiTypography-body2 css-bvuapi-MuiTypography-root"
          >
            진행중
          </span>
          <span
            class="MuiTypography-root MuiTypography-caption css-mpaqru-MuiTypography-root"
          >
            6
          </span>
        </div>
      </span>
    </div>
    <div
      class="MuiButtonBase-root MuiChip-root MuiChip-outlined MuiChip-sizeMedium MuiChip-colorDefault MuiChip-clickable MuiChip-clickableColorDefault MuiChip-outlinedDefault css-18i5t4e-MuiButtonBase-root-MuiChip-root"
      role="button"
      tabindex="0"
    >
      <span
        class="MuiChip-label MuiChip-labelMedium css-16cgrcw-MuiChip-label"
      >
        <div
          class="MuiStack-root css-nfwmfk-MuiStack-root"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall css-120dh41-MuiSvgIcon-root"
            data-testid="ShieldMoonRoundedIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="m11.3 2.26-6 2.25C4.52 4.81 4 5.55 4 6.39v4.7c0 4.83 3.13 9.37 7.43 10.75.37.12.77.12 1.14 0 4.3-1.38 7.43-5.91 7.43-10.75v-4.7c0-.83-.52-1.58-1.3-1.87l-6-2.25c-.45-.18-.95-.18-1.4-.01m4.67 12.15c-1.84 2.17-5.21 2.1-6.96-.07-2.19-2.72-.65-6.72 2.69-7.33.34-.06.63.27.51.6-.46 1.23-.39 2.64.32 3.86s1.89 1.99 3.18 2.2c.34.05.49.47.26.74"
            />
          </svg>
          <span
            class="MuiTypography-root MuiTypography-body2 css-bvuapi-MuiTypography-root"
          >
            대기
          </span>
          <span
            class="MuiTypography-root MuiTypography-caption css-mpaqru-MuiTypography-root"
          >
            4
          </span>
        </div>
      </span>
    </div>
    <div
      class="MuiButtonBase-root MuiChip-root MuiChip-outlined MuiChip-sizeMedium MuiChip-colorDefault MuiChip-clickable MuiChip-clickableColorDefault MuiChip-outlinedDefault css-18i5t4e-MuiButtonBase-root-MuiChip-root"
      role="button"
      tabindex="0"
    >
      <span
        class="MuiChip-label MuiChip-labelMedium css-16cgrcw-MuiChip-label"
      >
        <div
          class="MuiStack-root css-nfwmfk-MuiStack-root"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall css-120dh41-MuiSvgIcon-root"
            data-testid="PersonRoundedIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M12 12c2.21 0 4-1.79 4-4s-1.79-4-4-4-4 1.79-4 4 1.79 4 4 4m0 2c-2.67 0-8 1.34-8 4v1c0 .55.45 1 1 1h14c.55 0 1-.45 1-1v-1c0-2.66-5.33-4-8-4"
            />
          </svg>
          <span
            class="MuiTypography-root MuiTypography-body2 css-bvuapi-MuiTypography-root"
          >
            소유자
          </span>
          <span
            class="MuiTypography-root MuiTypography-caption css-mpaqru-MuiTypography-root"
          >
            2
          </span>
        </div>
      </span>
    </div>
  </div>
</div>
`;

exports[`Storybook 시각 회귀 스냅샷 > ToastNotification/Error 렌더링 스냅샷 유지 1`] = `
<div
  class="MuiStack-root css-1x33toh-MuiStack-root"
>
  <button
    class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-colorPrimary MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-colorPrimary css-74d805-MuiButtonBase-root-MuiButton-root"
    tabindex="0"
    type="button"
  >
    토스트 다시 보기
  </button>
  <div
    class="MuiSnackbar-root MuiSnackbar-anchorOriginBottomCenter css-gy7oyn-MuiSnackbar-root"
    role="presentation"
  >
    <div
      class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation0 css-iw4dj3-MuiPaper-root"
      direction="up"
      style="--Paper-shadow: none; opacity: 1; transform: scale(1, 1); transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,transform 150ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
    >
      <div
        class="MuiBox-root css-khz04w"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
          data-testid="ReportGmailerrorredRoundedIcon"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M20.71 7.98 16.03 3.3c-.19-.19-.45-.3-.71-.3H8.68c-.26 0-.52.11-.7.29L3.29 7.98c-.18.18-.29.44-.29.7v6.63c0 .27.11.52.29.71l4.68 4.68c.19.19.45.3.71.3h6.63c.27 0 .52-.11.71-.29l4.68-4.68c.19-.19.29-.44.29-.71V8.68c.01-.26-.1-.52-.28-.7M19 14.9 14.9 19H9.1L5 14.9V9.1L9.1 5h5.8L19 9.1z"
          />
          <circle
            cx="12"
            cy="16"
            r="1"
          />
          <path
            d="M12 7c-.55 0-1 .45-1 1v5c0 .55.45 1 1 1s1-.45 1-1V8c0-.55-.45-1-1-1"
          />
        </svg>
      </div>
      <div
        class="MuiStack-root css-1nbyx9h-MuiStack-root"
      >
        <div
          class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom MuiAlertTitle-root css-tw30nk-MuiTypography-root-MuiAlertTitle-root"
        >
          저장 실패
        </div>
        <p
          class="MuiTypography-root MuiTypography-body2 css-1skqokt-MuiTypography-root"
        >
          가계부를 저장하지 못했습니다. 잠시 후 다시 시도해주세요.
        </p>
      </div>
      <button
        class="MuiButtonBase-root MuiIconButton-root MuiIconButton-edgeEnd MuiIconButton-sizeSmall css-w19nvf-MuiButtonBase-root-MuiIconButton-root"
        tabindex="0"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall css-120dh41-MuiSvgIcon-root"
          data-testid="CloseRoundedIcon"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M18.3 5.71a.996.996 0 0 0-1.41 0L12 10.59 7.11 5.7a.996.996 0 0 0-1.41 0c-.39.39-.39 1.02 0 1.41L10.59 12 5.7 16.89c-.39.39-.39 1.02 0 1.41s1.02.39 1.41 0L12 13.41l4.89 4.89c.39.39 1.02.39 1.41 0s.39-1.02 0-1.41L13.41 12l4.89-4.89c.38-.38.38-1.02 0-1.4"
          />
        </svg>
      </button>
    </div>
  </div>
</div>
`;

exports[`Storybook 시각 회귀 스냅샷 > ToastNotification/Warning 렌더링 스냅샷 유지 1`] = `
<div
  class="MuiStack-root css-1x33toh-MuiStack-root"
>
  <button
    class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-colorPrimary MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-colorPrimary css-74d805-MuiButtonBase-root-MuiButton-root"
    tabindex="0"
    type="button"
  >
    토스트 다시 보기
  </button>
  <div
    class="MuiSnackbar-root MuiSnackbar-anchorOriginBottomCenter css-gy7oyn-MuiSnackbar-root"
    role="presentation"
  >
    <div
      class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation0 css-10epboq-MuiPaper-root"
      direction="up"
      style="--Paper-shadow: none; opacity: 1; transform: scale(1, 1); transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,transform 150ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
    >
      <div
        class="MuiBox-root css-1w6e752"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
          data-testid="WarningAmberRoundedIcon"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M12 5.99 19.53 19H4.47zM2.74 18c-.77 1.33.19 3 1.73 3h15.06c1.54 0 2.5-1.67 1.73-3L13.73 4.99c-.77-1.33-2.69-1.33-3.46 0zM11 11v2c0 .55.45 1 1 1s1-.45 1-1v-2c0-.55-.45-1-1-1s-1 .45-1 1m0 5h2v2h-2z"
          />
        </svg>
      </div>
      <div
        class="MuiStack-root css-1nbyx9h-MuiStack-root"
      >
        <div
          class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom MuiAlertTitle-root css-tw30nk-MuiTypography-root-MuiAlertTitle-root"
        >
          확인이 필요합니다
        </div>
        <p
          class="MuiTypography-root MuiTypography-body2 css-1skqokt-MuiTypography-root"
        >
          멤버 초대가 아직 완료되지 않았습니다. 다시 보내시겠어요?
        </p>
      </div>
      <button
        class="MuiButtonBase-root MuiIconButton-root MuiIconButton-edgeEnd MuiIconButton-sizeSmall css-ome8xj-MuiButtonBase-root-MuiIconButton-root"
        tabindex="0"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall css-120dh41-MuiSvgIcon-root"
          data-testid="CloseRoundedIcon"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M18.3 5.71a.996.996 0 0 0-1.41 0L12 10.59 7.11 5.7a.996.996 0 0 0-1.41 0c-.39.39-.39 1.02 0 1.41L10.59 12 5.7 16.89c-.39.39-.39 1.02 0 1.41s1.02.39 1.41 0L12 13.41l4.89 4.89c.39.39 1.02.39 1.41 0s.39-1.02 0-1.41L13.41 12l4.89-4.89c.38-.38.38-1.02 0-1.4"
          />
        </svg>
      </button>
    </div>
  </div>
</div>
`;
